--- a/#src/index.html
+++ b/#src/index.html
@@ -14,6 +14,10 @@
 		@@include('_work.html')
 		@@include('_agent.html')
 		@@include('_price.html')
+		@@include('_consultation.html')
+		@@include('_manager.html')
+		@@include('_scheme.html')
+		@@include('_feedback.html')
 	</main>
 </body>
 <script src="js/script.min.js"></script>
