--- a/#src/index.html
+++ b/#src/index.html
@@ -18,6 +18,9 @@
 		@@include('_manager.html')
 		@@include('_scheme.html')
 		@@include('_feedback.html')
+		@@include('_questions.html')
+		@@include('_map.html')
+		@@include('_footer.html')
 	</main>
 </body>
 <script src="js/script.min.js"></script>
