--- a/#src/index.html
+++ b/#src/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.min.css">
-	<title>Document</title>
+	<link rel="icon" href="img/favicon (1).ico" type="image/x-icon">
+	<title>Доставка грузов из Китая</title>
 </head>
 <body>
 	@@include('_header.html')
