адаптив на 768px

--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -10,12 +10,12 @@
 					</div>
 					<p class="footer__text">Global Opt - Доставка грузов из Китая в Россию и СНГ</p>
 				</div>
-				<div class="header__contacts">
+				<div class="header__contacts footer__contacts">
 					<div class="header__tel">
 						<div class="header__quest">Есть вопросы?</div>
 						<div class="header__phone"><a href="tel:+79264230100">+7 (926) 423 01 00</a></div>
 					</div>
-					<button class="header__btn">перезвоните мне</button>
+					<button class="header__btn footer__btn">перезвоните мне</button>
 				</div>
 			</div>
 			<div class="footer__line"></div>
@@ -26,7 +26,7 @@
 				</div>
 				<div class="footer__right">
 					<small class="footer__site">Создание сайта:</small>
-					<img src="img/footer-logo.png">
+					<img src="img/footer-logo.png" alt="logo">
 				</div>
 			</div>
 		</div>
