--- a/#src/_header.html
+++ b/#src/_header.html
@@ -33,6 +33,11 @@
 				</div>
 				<button class="header__btn">перезвоните мне</button>
 			</div>
+			<div class="header__burger">
+				<div class="burger-line"></div>
+				<div class="burger-line"></div>
+				<div class="burger-line"></div>
+			</div>
 		</div>
 	</div>
 	<section class="promo">
@@ -49,30 +54,30 @@
 					<div class="line"></div>
 				</div>
 				<ul class="promo__list">
-					<div class="promo__items">
+					<li class="promo__items">
 						<div class="promo__img">
 							<img src="img/иконка.png" alt="">
 						</div>
 							<p>Перевозка негабаритных и крупнотоннажных грузов</p>
-					</div>
-					<div class="promo__items">
+					</li>
+					<li class="promo__items">
 						<div class="promo__img">
 							<img src="img/иконка_2.png" alt="">
 						</div>
 							<p>Cамостоятельно декларируем и проводим таможенную очистку с оптимизацией кодов и ставок</p>
-					</div>
-					<div class="promo__items">
+					</li>
+					<li class="promo__items">
 						<div class="promo__img">
 							<img src="img/иконка_3.png" alt="">
 						</div>
 							<p>Осуществляем прямые поставки с заводов от двери до двери</p>
-					</div>
-					<div class="promo__items">
+					</li>
+					<li class="promo__items">
 						<div class="promo__img">
 							<img src="img/иконка_4.png" alt="">
 						</div>
 							<p>Осуществляем прямые поставки с заводов от двери до двери</p>
-					</div>
+					</li>
 				</ul>
 				<button class="promo__btn">полуить расчет</button>
 			</div>
