--- a/#src/_work.html
+++ b/#src/_work.html
@@ -1,4 +1,4 @@
-<div class="work">
+<section class="work">
 	<div class="container">
 		<div class="work__wrapper">
 			<h2 class="title">Наша работа - больше чем просто доставка</h2>
@@ -42,4 +42,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
