--- a/#src/_questions.html
+++ b/#src/_questions.html
@@ -1,4 +1,5 @@
 <section class="questions">
+	<h2 class="questions__mainTitle">Ваши вопросы</h2>
 	<div class="container">
 		<div class="questions__wrapper">
 			<div class="questions__feed">
